# plat-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
capabilities/canvas/: manifest.json  manifest.json.in
dev/: canvas.md  code-style.md  design.md  keyword_translation_research.md  list_keywords.py  std_roadmap.md
docs/: check_links.py  mkdocs.yml
docs/assets/stylesheets/: plat-lang.css
docs/en/: examples.md  getting-started.md  index.md  installation.md  language-tour.md
docs/hooks/: platlang_lexer.py
docs/li/: examples.md  getting-started.md  index.md  installation.md  language-tour.md
examples/: conditions.plat  fibonacci.plat  hello.plat  loops.plat  tables.plat
examples/en/: input.plat  loops.plat
examples/li/: canvas.plat  conditions.plat  input.plat  limburg_belgie_vlag_canvas.plat  limburg_vlag_canvas.plat  loops.plat  problem.plat  tables.plat
logo/: README.md
paper/: Makefile  README.md  main.tex  references.bib
paper/sections/: 00-abstract.tex  01-introduction.tex  02-background.tex  03-design-goals.tex  04-language-overview.tex  05-localization-and-cultural-identity.tex  06-implementation.tex  07-discussion.tex  08-limitations.tex  09-related-work.tex  10-conclusion.tex
src/: ast.h  ast_printer.cpp  ast_printer.h  diagnostics.cpp  diagnostics.h  environment.cpp  environment.h  interpreter.cpp  interpreter.h  main.cpp  platlang_lexer.l  platlang_parser.y  value.cpp  value.h  version.h
src/builtins/: builtin_registry.cpp  builtin_registry.h  canvas_builtins.cpp  canvas_builtins.h  core_builtins.cpp  core_builtins.h
src/canvas/: canvas_backend.h  canvas_service.cpp  canvas_service.h  recording_canvas_backend.cpp  recording_canvas_backend.h  sdl_canvas_backend.cpp  sdl_canvas_backend.h
src/capabilities/: canvas_sdl_module.cpp  capability_loader.cpp  capability_loader.h
tests/e2e/: break_outside_loop.err  break_outside_loop.plat  builtin_decomposed_diacritic_alias.plat  builtin_diacritic_alias.out  builtin_diacritic_alias.plat  canvas_unavailable.err  canvas_unavailable.plat  continue_outside_loop.err  continue_outside_loop.plat  division_by_zero.err  division_by_zero.plat  fibonacci.plat  hello.out  hello.plat  import_canvas_basic.out  import_canvas_basic.plat  import_canvas_protected_name.err  import_canvas_protected_name.plat  import_unknown.err  import_unknown.plat  input.out  input.plat  input_crlf.out  input_crlf.plat  invalid_assignment_target.err  invalid_table_key.err  invalid_table_key.plat  logical_operators.out  logical_operators.plat  loops.plat  mutual_functions.out  mutual_functions.plat  nested_function.err  nested_function.plat  protected_composite_type.err  protected_composite_type.plat  protected_diacritic_alias.err  protected_diacritic_alias.plat  protected_name.err  protected_name.plat  (+20 more)
tests/unit/: builtin_registry_test.cpp  canvas_test.cpp  diagnostics_test.cpp  test_helpers.h  test_main.cpp  value_test.cpp
